--- a/pom.xml
+++ b/pom.xml
@@ -8,55 +8,60 @@
 	<name>dashboard</name>
 	<url>http://maven.apache.org</url>
 	<properties>
-		<cobertura.version>2.7</cobertura.version>
-		<encoding>UTF-8</encoding>
-		<hibernate.version>5.0.6.Final</hibernate.version>
-		<hsqldb.version>2.3.3</hsqldb.version>
-		<java.version>1.8</java.version>
-		<jcl-over-slf4j.version>1.7.5</jcl-over-slf4j.version>
-		<junit.version>4.11</junit.version>
-		<logback.version>1.0.13</logback.version>
-		<springframework.version>4.2.4.RELEASE</springframework.version>
-		<springframework.boot.version>1.3.1.RELEASE</springframework.boot.version>
+		<cobertura_version>2.7</cobertura_version>
+		<hibernate_version>5.0.6.Final</hibernate_version>
+		<hsqldb_version>2.3.3</hsqldb_version>
+		<java_version>1.8</java_version>
+		<jcl-over-slf4j_version>1.7.5</jcl-over-slf4j_version>
+		<junit_version>4.11</junit_version>
+		<logback_version>1.0.13</logback_version>
+		<mariadb.jdbc_version>1.3.3</mariadb.jdbc_version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<springframework_version>4.2.4.RELEASE</springframework_version>
+		<springframework.boot_version>1.3.1.RELEASE</springframework.boot_version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>${hibernate.version}</version>
+			<version>${hibernate_version}</version>
 		</dependency>
+		<!-- HSQLDB -->
 		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
-			<version>${hsqldb.version}</version>
+			<version>${hsqldb_version}</version>
 		</dependency>
+		<!--  JUnit -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
+			<version>${junit_version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>${logback.version}</version>
+			<version>${logback_version}</version>
+		</dependency>
+		<!-- MariaDB -->
+		<dependency>
+			<groupId>org.mariadb.jdbc</groupId>
+			<artifactId>mariadb-java-client</artifactId>
+			<version>${mariadb.jdbc_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jcl-over-slf4j</artifactId>
-			<version>${jcl-over-slf4j.version}</version>
+			<version>${jcl-over-slf4j_version}</version>
 			<scope>runtime</scope>
 		</dependency>
 		<!-- Spring -->
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-			<version>${springframework.boot.version}</version>
-		</dependency>		
-		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>${springframework.version}</version>
+			<version>${springframework_version}</version>
 			<exclusions>
 				<!-- Exclude Commons Logging in favor of SLF4j -->
 				<exclusion>
@@ -68,12 +73,23 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
-			<version>${springframework.version}</version>
+			<version>${springframework_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
-			<version>${springframework.version}</version>
+			<version>${springframework_version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<version>${springframework.boot_version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+			<version>${springframework.boot_version}</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -82,7 +98,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
-				<version>${cobertura.version}</version>
+				<version>${cobertura_version}</version>
 				<configuration>
 					<check />
 				</configuration>
@@ -102,7 +118,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
-				<version>${cobertura.version}</version>
+				<version>${cobertura_version}</version>
 				<configuration>
 					<formats>
 						<format>html</format>
